--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ flutter:
     - assets/logincardbg.jpg
     - assets/logo.jpg
     - assets/doctor.png
+    - assets/food1.jpg
+    - assets/food2.jpg
+    - assets/food3.jpg
   fonts:
     - family: Roboto
       fonts:
